--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.1.3",
+    "cheerio": "^1.0.0-rc.12",
+    "eslint": "^8.25.0",
     "shelljs": "^0.8.5"
   }
 }
