--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "server-type-all": [
     {
       "url": "http://localhost:7860/generate-stream",
-      "name": "naifu",
+      "name": "naifu_k_euler_local",
       "isMagic": true,
       "arg": {
         "prompt": "masterpiece, best quality,$prompts",
@@ -16,8 +16,25 @@
         "ucPreset": 0,
         "uc": "lowres, bad anatomy, bad hands, text, error, missing fingers, extra digit, fewer digits, cropped, worst quality, low quality, normal quality, jpeg artifacts, signature, watermark, username, blurry,$unprompt"
       }
+    },
+    {
+      "url": "http://ai.22733.site/generate-stream",
+      "name": "naifu_k_euler_ancestral",
+      "isMagic": true,
+      "arg": {
+        "prompt": "masterpiece, best quality,$prompts",
+        "width": 1024,
+        "height": 576,
+        "scale": 12,
+        "sampler": "k_euler_ancestral",
+        "steps": 28,
+        "seed": "$seed",
+        "n_samples": 1,
+        "ucPreset": 0,
+        "uc": "lowres, bad anatomy, bad hands, text, error, missing fingers, extra digit, fewer digits, cropped, worst quality, low quality, normal quality, jpeg artifacts, signature, watermark, username, blurry,$unprompt"
+      }
     }
   ],
-  "server-type": "naifu",
+  "server-type": "naifu_k_euler_ancestral",
   "Super-Resolution": "ncnn -i $input -o $output"
 }
