--- a/config.json
+++ b/config.json
@@ -52,6 +52,6 @@
       }
     }
   ],
-  "server-type": "naifu_k_euler_ancestral_local",
+  "server-type": ["naifu_k_euler_ancestral","naifu_k_euler_ancestral_local"],
   "Super-Resolution": "ncnn -i $input -o $output"
 }
