--- a/config.json
+++ b/config.json
@@ -18,6 +18,27 @@
       }
     },
     {
+      "url": "https://ngrok.io",
+      "name": "naifu_k_euler_ancestral_ngrok",
+      "isMagic": true,
+      "ngrok": {
+        "enadle": true,
+        "token": "2GZ2Qu3eF16h1plsPeS6jpYRpPg_7ejEiaLRy8uKdcfgKiQZL"
+      },
+      "arg": {
+        "prompt": "masterpiece, best quality,$prompts",
+        "width": 1024,
+        "height": 576,
+        "scale": 12,
+        "sampler": "k_euler_ancestral",
+        "steps": 28,
+        "seed": "$seed",
+        "n_samples": 1,
+        "ucPreset": 0,
+        "uc": "lowres, bad anatomy, bad hands, text, error, missing fingers, extra digit, fewer digits, cropped, worst quality, low quality, normal quality, jpeg artifacts, signature, watermark, username, blurry,$unprompt"
+      }
+    },
+    {
       "url": "http://ai.22733.site/generate-stream",
       "name": "naifu_k_euler_ancestral",
       "isMagic": true,
@@ -52,6 +73,10 @@
       }
     }
   ],
-  "server-type": ["naifu_k_euler_ancestral","naifu_k_euler_ancestral_local"],
+  "server-type": [
+    "naifu_k_euler_ancestral_ngrok",
+    "naifu_k_euler_ancestral",
+    "naifu_k_euler_ancestral_local"
+  ],
   "Super-Resolution": "ncnn -i $input -o $output -s 2"
 }
