--- a/config.json
+++ b/config.json
@@ -1,81 +1,52 @@
 {
   "server-type-all": [
     {
-      "url": "http://localhost:7860/generate-stream",
-      "name": "naifu_k_euler_local",
-      "isMagic": true,
-      "arg": {
-        "prompt": "masterpiece, best quality,$prompts",
-        "width": 1024,
-        "height": 576,
-        "scale": 12,
-        "sampler": "k_euler",
-        "steps": 28,
-        "seed": "$seed",
-        "n_samples": 1,
-        "ucPreset": 0,
-        "uc": "lowres, bad anatomy, bad hands, text, error, missing fingers, extra digit, fewer digits, cropped, worst quality, low quality, normal quality, jpeg artifacts, signature, watermark, username, blurry,$unprompt"
-      }
-    },
-    {
       "url": "/generate-stream",
       "name": "naifu_k_euler_ancestral_ngrok",
       "isMagic": true,
+      "apiType": "naifu",
       "ngrok": {
         "enadle": true,
         "token": "2GZ2Qu3eF16h1plsPeS6jpYRpPg_7ejEiaLRy8uKdcfgKiQZL"
       },
-      "arg": {
-        "prompt": "masterpiece, best quality,$prompts",
-        "width": 1024,
-        "height": 576,
-        "scale": 12,
-        "sampler": "k_euler_ancestral",
-        "steps": 28,
-        "seed": "$seed",
-        "n_samples": 1,
-        "ucPreset": 0,
-        "uc": "lowres, bad anatomy, bad hands, text, error, missing fingers, extra digit, fewer digits, cropped, worst quality, low quality, normal quality, jpeg artifacts, signature, watermark, username, blurry,$unprompt"
+      "defaultPrompts": [
+        "masterpiece, best quality",
+        "lowres, bad anatomy, bad hands, text, error, missing fingers, extra digit, fewer digits, cropped, worst quality, low quality, normal quality, jpeg artifacts, signature, watermark, username, blurry"
+      ],
+      "option": {
+        "sampler": "k_euler_ancestral"
       }
     },
     {
-      "url": "http://ai.22733.site/generate-stream",
-      "name": "naifu_k_euler_ancestral",
-      "isMagic": true,
-      "arg": {
-        "prompt": "masterpiece, best quality,$prompts",
-        "width": 1024,
-        "height": 576,
-        "scale": 12,
-        "sampler": "k_euler_ancestral",
-        "steps": 28,
-        "seed": "$seed",
-        "n_samples": 1,
-        "ucPreset": 0,
-        "uc": "lowres, bad anatomy, bad hands, text, error, missing fingers, extra digit, fewer digits, cropped, worst quality, low quality, normal quality, jpeg artifacts, signature, watermark, username, blurry,$unprompt"
-      }
-    },
-    {
-      "url": "http://localhost:7860/generate-stream",
+      "url": "http://localhost:6969/generate-stream",
       "name": "naifu_k_euler_ancestral_local",
       "isMagic": true,
-      "arg": {
-        "prompt": "masterpiece, best quality,$prompts",
-        "width": 1024,
-        "height": 576,
-        "scale": 12,
-        "sampler": "k_euler_ancestral",
-        "steps": 28,
-        "seed": "$seed",
-        "n_samples": 1,
-        "ucPreset": 0,
-        "uc": "lowres, bad anatomy, bad hands, text, error, missing fingers, extra digit, fewer digits, cropped, worst quality, low quality, normal quality, jpeg artifacts, signature, watermark, username, blurry,$unprompt"
+      "apiType": "naifu",
+      "defaultPrompts": [
+        "masterpiece, best quality",
+        "lowres, bad anatomy, bad hands, text, error, missing fingers, extra digit, fewer digits, cropped, worst quality, low quality, normal quality, jpeg artifacts, signature, watermark, username, blurry"
+      ],
+      "option": {
+        "sampler": "k_euler_ancestral"
+      }
+    },
+    {
+      "url": "http://127.0.0.1:7860/api/predict/",
+      "name": "stable-diffusion_local",
+      "isMagic": true,
+      "apiType": "stable-diffusion",
+      "defaultPrompts": [
+        "masterpiece, best quality",
+        "lowres, bad anatomy, bad hands, text, error, missing fingers, extra digit, fewer digits, cropped, worst quality, low quality, normal quality, jpeg artifacts, signature, watermark, username, blurry"
+      ],
+      "option": {
+        "sampler": "k_euler_ancestral"
       }
     }
   ],
   "server-type": [
     "naifu_k_euler_ancestral_ngrok",
-    "naifu_k_euler_ancestral",
+    "stable-diffusion_local",
     "naifu_k_euler_ancestral_local"
   ],
   "Super-Resolution": "ncnn -i $input -o $output -s 2"
