--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ai-disktop-image",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "test.js",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.25.0",
+    "sha1": "^1.1.1",
     "shelljs": "^0.8.5"
   }
 }
