--- a/config.json
+++ b/config.json
@@ -31,7 +31,7 @@
       }
     },
     {
-      "url": "http://127.0.0.1:7860/api/predict/",
+      "url": "http://127.0.0.1:7860/api/predict",
       "name": "stable-diffusion_local",
       "isMagic": true,
       "apiType": "stable-diffusion",
