--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ai-disktop-image",
   "version": "1.0.0",
-  "main": "test.js",
+  "main": "getTag.js",
   "license": "MIT",
   "dependencies": {
     "axios": "^1.1.3",
