--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "ai-disktop-image",
   "version": "1.0.0",
-  "main": "getTag.js",
+  "main": "test.js",
   "license": "MIT",
   "dependencies": {
+    "@fa7ad/wallpaper": "^2.4.2-a",
     "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.25.0",
